--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="./style.css"/>
         <meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<title>markalmax</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<meta name="theme-color" content="#5C5C5C" />
 		<meta name="description" content="markalmax's personal website" />
 		<meta name="author" content="markalmax" />
